--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,32 @@
-.overflow-div{
-    overflow-y: scroll;
-    height: 500px;
-    width: 500px;
-    border: 2px solid black;
+body{
+    background-color: #ffffff;
+}
+h1, h2{
+    color: #000000;
+}
+.container{
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; */
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 2fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px; 
+}
+
+.my-list{
+    background-color: black;
+    color: white;
+    width: 300px;
+    /* border: 2px solid #92cbdf;
+    box-shadow: 2px 2px 2px 2px #e9f5f9; */
+    margin: 50px;
+}
+
+li{
+    list-style-type: none;
+    font-size: 24px;
+    text-align: center;
 }
