--- a/src/Styles/DepositForm.css
+++ b/src/Styles/DepositForm.css
@@ -55,7 +55,7 @@ input{
   --slice-4: inset(40% -6px 43% 0);
   --slice-5: inset(80% -6px 5% 0);
   
-  content: 'ALTERNATE TEXT';
+  content: 'AMONG US';
   display: block;
   position: absolute;
   top: 0;
