--- a/src/Styles/Modal.css
+++ b/src/Styles/Modal.css
@@ -1,18 +1,13 @@
 .modal {
   display: block;
   position: top;
-/*   top: 50px; */
-  background-color: #ffffff;
+  background-color: #00f0ff;
   left:30%;
-/*   right: 50%; */
- /*  width: 820px; */
   position: absolute;
   z-index: 41;
-  /* padding: 30px; */
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
-  border: 2px solid black;
   width: 500px;
   padding: 20px;
   text-align: center;
@@ -22,20 +17,12 @@ img {
   height: 500px;
 }
 
-/* .modal-btn {
-  margin: 0 auto;
-  display: block;
-  cursor: pointer;
-  height: 50px;
-} */
-
-/* CSS */
 .modal-btn {
-  background-color: #fbeee0;
-  border: 2px solid #422800;
+  background-color: #000000;
+  border: 2px solid #fcee0a;
   border-radius: 30px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
+  box-shadow: #fcee0a 4px 4px 0 0;
+  color: #fcee0a;
   cursor: pointer;
   display: inline-block;
   font-weight: 600;
@@ -50,7 +37,8 @@ img {
 }
 
 .modal-btn:hover {
-  background-color: #fff;
+  background-color: #fcee0a;
+  color: #000000;
 }
 
 .modal-btn:active {
