--- a/src/Styles/DepositForm.css
+++ b/src/Styles/DepositForm.css
@@ -1,16 +1,16 @@
 .deposit-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family:Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-input{
-    width: 220px;
-    border-radius: 10px;
-    padding: 10px;
-    height: 20px;
+input {
+  width: 220px;
+  border-radius: 10px;
+  padding: 10px;
+  height: 20px;
 }
 
 /* .deposit-button{
@@ -34,13 +34,13 @@ input{
   height: 76px;
   line-height: 78px;
   font-size: 20px;
-  font-family: 'Bebas Neue', sans-serif;
+  font-family: "Bebas Neue", sans-serif;
   background: linear-gradient(45deg, transparent 5%, /* #43ee37 */ #000000 5%);
   border: 0;
   color: #ffff;
   font-weight: bold;
   letter-spacing: 3px;
-  box-shadow: 6px 0px 0px #00E6F6;
+  box-shadow: 6px 0px 0px #02254b;
   outline: transparent;
   position: relative;
   user-select: none;
@@ -55,16 +55,22 @@ input{
   --slice-3: inset(10% -6px 85% 0);
   --slice-4: inset(40% -6px 43% 0);
   --slice-5: inset(80% -6px 5% 0);
-  
-  content: 'AMONG US';
+
+  content: "AMONG US";
   display: block;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, #00E6F6 5%);
-  text-shadow: -3px -3px 0px #000000, 3px 3px 0px #00E6F6;
+  background: linear-gradient(
+    45deg,
+    transparent 3%,
+    #02254b 3%,
+    #02254b 5%,
+    #02254b 5%
+  );
+  text-shadow: -3px -3px 0px #000000, 3px 3px 0px #02254b;
   clip-path: var(--slice-0);
 }
 
