--- a/src/Styles/Modal.css
+++ b/src/Styles/Modal.css
@@ -1,10 +1,11 @@
 .modal {
   display: block;
   position: top;
-  background-color: #00f0ff;
-  left:30%;
+  background-color: #ffffff;
+  left:35%;
+  top: 3%;
   position: absolute;
-  z-index: 41;
+  z-index: 200;
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -18,11 +19,11 @@ img {
 }
 
 .modal-btn {
-  background-color: #000000;
-  border: 2px solid #fcee0a;
+  background-color: #02254b;
+  border: 2px solid #009faa;
   border-radius: 30px;
-  box-shadow: #fcee0a 4px 4px 0 0;
-  color: #fcee0a;
+  box-shadow: #02254b 4px 4px 0 0;
+  color: #ffffff;
   cursor: pointer;
   display: inline-block;
   font-weight: 600;
@@ -37,13 +38,8 @@ img {
 }
 
 .modal-btn:hover {
-  background-color: #fcee0a;
-  color: #000000;
-}
-
-.modal-btn:active {
-  box-shadow: #422800 2px 2px 0 0;
-  transform: translate(2px, 2px);
+  background-color: #ffffff;
+  color: #02254b;
 }
 
 @media (min-width: 768px) {
