--- a/src/Styles/Modal.css
+++ b/src/Styles/Modal.css
@@ -2,9 +2,6 @@
   display: block;
   position: top;
   background-color: #ffffff;
-  left:35%;
-  top: 3%;
-  position: absolute;
   z-index: 200;
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
@@ -12,6 +9,10 @@
   width: 500px;
   padding: 20px;
   text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 img {
